--- a/html/about.html
+++ b/html/about.html
@@ -61,13 +61,13 @@
             <div class="rightcolumn">
                 <div class="card">
                     <div class = "row">
-                        <div class = "column"><img src = "/resources/avatars/pc.png" class = "avatar" style = "margin: 0em -0.2em"></div>
+                        <div class = "column"><img src = "/resources/avatars/pc.png" class = "avatar" style = "margin: 0em -0.2em" alt = "Avatar Image for perpetualCreations"></div>
                         <!-- <div class = "column"><img src = "/resources/avatars/pc-alternate.png" class = "avatar" style = "margin-left: 10px;"></div> -->
                     </div>
-                    <h3>perpetualCreations</h3>
+                    <h3>T. Chen</h3>
                     <p style = "font-size: 10px; color: black; margin: -1em 0em 3.5em;"><i>I despise physical activity and sleep is for the weak.</i></p>
                     <p>I maintain and contribute to this site.</p>
-                    <p>My real name is T. Chen, and I draw sketches and make things. Sometimes I'll take pictures on errands, they make nice backgrounds.</p>
+                    <p>I use perpetualCreations as my handlename. Sometimes I'll take pictures on errands or draw, they make nice backgrounds.</p>
                     <p id = "opinion-text"></p>
                     <h4>Contacts:</h4>
                     <p>Email 1: tchen0584@gmail.com</p>
