--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class = "content">
                         <p>Project hardware and control software are still in progress.</p>
                         <p>Released CAD assets are outdated, revision 2 will be released later once fully tested.</p>
-                        <p>Currently in re-assembly and integration testing.</p>
+                        <p>Currently in integration testing and completing final TODOs.</p>
                     </div>
                     <hr>
                     <button class = "collapsible">Project Contents</button>
@@ -155,7 +155,7 @@
         <div class = "row">   
            <div class = "column">
                 <div class = "card">
-                    <img src = "/projects/lexiconcognito/icon-upscaled.png" alt = "Lexicon Cognito icon" class = "project-icons">
+                    <img src = "/projects/lexiconcognito/icon-upscaled.png" alt = "Lexicon Cognito Icon" class = "project-icons">
                     <h3>Lexicon Cognito</h3>
                     <p>Web application built with Python Flask, for creating personal electronic libraries.</p>
                     <hr>
