--- a/projects/abl/docs.html
+++ b/projects/abl/docs.html
@@ -25,14 +25,14 @@
             <a href = "/index.html">Back To Portfolio</a>
         </div>
         <div class = "schema">
-            <img src="/projects/abl/icon-upscaled.png" class = "project-icons"><h1>ABL Documentation</h1>
-            <p style = "margin-left: 5px;">Original available <a href = "https://github.com/perpetualCreations/AnalyticalBlackLight/blob/master/readme.md" target = "_blank">here</a>.</p>
+            <img src="/projects/abl/icon-upscaled.png" class = "project-icons" alt = "ABL Project Icon"><h1>ABL Documentation</h1>
+            <p style = "margin-left: 5px;">Original <a href = "https://github.com/perpetualCreations/AnalyticalBlackLight/blob/master/readme.md" target = "_blank">documentation available here</a>.</p>
             <div class = "badges-container">
                 <div class = "badges">
-                    <a href = "https://forthebadge.com" target = "_blank"><img src = "https://forthebadge.com/images/badges/made-with-python.svg"></a>
+                    <a href = "https://forthebadge.com" target = "_blank"><img src = "https://forthebadge.com/images/badges/made-with-python.svg" alt = "ForTheBadge Made With Python Badge"></a>
                 </div>
                 <div class = "badges">
-                    <a href = "https://forthebadge.com" target = "_blank"><img src = "https://forthebadge.com/images/badges/you-didnt-ask-for-this.svg"></a>
+                    <a href = "https://forthebadge.com" target = "_blank"><img src = "https://forthebadge.com/images/badges/you-didnt-ask-for-this.svg" alt = "ForTheBadge You Didn't Ask For This Badge"></a>
                 </div>
             </div>
             <div id="content">
