--- a/projects/dgpn/docs.html
+++ b/projects/dgpn/docs.html
@@ -25,8 +25,8 @@
             <a href = "/index.html">Back To Portfolio</a>
         </div>
         <div class = "schema">
-            <img src="/projects/dgpn/dgpn-upscaled.png" class = "project-icons"><h1>deargodpleaseno (dgpn) Documentation</h1>
-            <p style = "margin-left: 5px;">Original available <a href = "https://github.com/perpetualCreations/deargodpleaseno/blob/master/README.md" target = "_blank">here</a>.</p>
+            <img src="/projects/dgpn/dgpn-upscaled.png" class = "project-icons" alt = "DGPN Project Icon"><h1>deargodpleaseno (dgpn) Documentation</h1>
+            <p style = "margin-left: 5px;">Original <a href = "https://github.com/perpetualCreations/deargodpleaseno/blob/master/README.md" target = "_blank">documentation available here</a>.</p>
             <div id="content">
                 <h4>Command-line tool for automatically deleting files, webpages, and directories.</h4>
                 <h4>Intended for Apache web server owners who want to host a temporary page or file that will deleted after a specified amount of time.</h4>
@@ -104,10 +104,12 @@
                 <p>Future features such as .htaccess control will be coming in following releases.</p>
                 <p>More major changes are planned to no longer use <span class = "code-quote">at</span>, instead running an hourly <span class = "code-quote">crontab</span> to check for expired items on a list of entries. This would free up <span class = "code-quote">atq</span> for the user.</p>
                 <h3>Misc.</h3>
+                <ul>
                 <li>The project icon is from a clip of Michael Gray Scott from the office, uttering the all-too-famous words, "No god please no!"</li>
                 <li>The project name were the words that exited my mouth after an instructor gave a research project, where the end product could be a webpage.</li>
                 <li>Not wanting to manually remove the page after the assignment was graded, this project was made.</li>
                 <li>This was the first ever project I made to use Debian packaging as the distribution end-product.</li>
+                </ul>
                 <h3>End</h3>
                 <p>This is the end of the documentation for the DGPN command and package.</p>
                 <p>If you any inquiries, please contact the project maintainer(s).</p>
