--- a/projects/raspbot/docs.html
+++ b/projects/raspbot/docs.html
@@ -25,7 +25,7 @@
             <a href = "/index.html">Back To Portfolio</a>
         </div>
         <div class = "schema">
-            <img src="/projects/raspbot/icon-upscaled.png" class = "project-icons"><h1>Raspbot Documentation</h1>
+            <img src="/projects/raspbot/icon-upscaled.png" class = "project-icons" alt = "Raspbot Project Icon"><h1>Raspbot Documentation</h1>
             <div id="content">
                 <div class="alert">
                     <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
@@ -91,18 +91,22 @@
                 <button class = "collapsible">Dust Sensor Module (Created 10-3-2020, Updated 10-3-2020)</button>
                 <div class = "content">
                     <p>[Finished]</p>
-                    <li>GP2Y1010AU0F Dust Sensor</li>
+                    <ul>
+                        <li>GP2Y1010AU0F Dust Sensor</li>
+                    </ul>
                     <p>Please install dust sensor with 3D-printable mounting hardware, the CAD files will be available for download.</p>
                 </div>
                 <button class = "collapsible">Robotic Arm Kit (Created 1-21-2019, Updated 10-3-2020)</button>
                 <div class = "content">
                     <p>[Finished]</p>
-                    <li><a href = "https://www.adafruit.com/product/2307" target = "_blank">High Power/Torque Metal Gear Micro Servo, Adafruit</a></li>
-                    <p>Set of two.</p>
-                    <li>Raspberry Pi Camera Board</li>
-                    <p>For arm camera view.</p>
-                    <li>Raspberry Pi Camera Board Extended Ribbon Cable</li>
-                    <p>Check if the included ribbon cable is long enought, it's likely you'll need a longer cable due to the amount of slack required.</p>
+                    <ul>
+                        <li><a href = "https://www.adafruit.com/product/2307" target = "_blank">High Power/Torque Metal Gear Micro Servo, Adafruit</a></li>
+                        <p>Set of two.</p>
+                        <li>Raspberry Pi Camera Board</li>
+                        <p>For arm camera view.</p>
+                        <li>Raspberry Pi Camera Board Extended Ribbon Cable</li>
+                        <p>Check if the included ribbon cable is long enought, it's likely you'll need a longer cable due to the amount of slack required.</p>
+                    </ul>
                 </div>
                 <button class = "collapsible">Base Parts Set (Created 11-26-2019, Updated 10-3-2020)</button>
                 <div class = "content">
