--- a/projects/raspbot/gallery.html
+++ b/projects/raspbot/gallery.html
@@ -13,11 +13,9 @@
         <link rel="preload" href="/projects/raspbot/gallery/upgrade-1-voltage-test.jpg" as="image">
         <link rel="preload" href="/projects/raspbot/gallery/last-photo-before-upgrade-1.jpg" as="image">
         <link rel="preload" href="/projects/raspbot/gallery/academic-demo-day.jpg" as="image">
-        <link rel="preload" href="/projects/raspbot/gallery/tag.jpg" as="image">
         <link rel="preload" href="/projects/raspbot/gallery/early-proto-build.jpg" as="image">
         <link rel="preload" href="/projects/raspbot/gallery/dropin.gif" as="image">
         <link rel="preload" href="/projects/raspbot/gallery/raspbotv2-internal-wip.jpg" as="image">
-        <link rel="preload" href="/projects/raspbot/gallery/dev-2021-a.jpg" as="image">
         <link rel="preload" href="/projects/raspbot/gallery/dev-2021-b.jpg" as="image">
         <link rel="preload" href="/projects/raspbot/gallery/dev-2021-c.jpg" as="image">
         <link rel="preload" href="/projects/raspbot/gallery/dev-2021-assembled-a.jpg" as="image">
@@ -25,6 +23,10 @@
         <link rel="preload" href="/projects/raspbot/gallery/dev-2021-assembled-c.jpg" as="image">
         <link rel="preload" href="/projects/raspbot/gallery/dev-2021-active-a.jpg" as="image">
         <link rel="preload" href="/projects/raspbot/gallery/dev-2021-active-b.jpg" as="image">
+        <link rel="preload" href="/projects/raspbot/gallery/dev-2021-active-c.jpg" as="image">
+        <link rel="preload" href="/projects/raspbot/gallery/client-dev-a.png" as="image">
+        <link rel="preload" href="/projects/raspbot/gallery/client-dev-b.png" as="image">
+        <link rel="preload" href="/projects/raspbot/gallery/client-dev-2-a.png" as="image">
         <link rel="icon" href="homeIcon-favicon.ico">
         <link rel="stylesheet" type="text/css" href="/css/main.css">
         <link rel="stylesheet" type="text/css" href="/css/gallery.css">
@@ -149,6 +151,12 @@
                 <img src="/projects/raspbot/gallery/client-dev-b.png">
             </a>
             <div class="caption">In-dev client, ping menu. (2021)</div>
+        </div>
+        <div class="gallery">
+            <a target="_blank" href="/projects/raspbot/gallery/client-dev-2-a.png">
+                <img src="/projects/raspbot/gallery/client-dev-2-a.png">
+            </a>
+            <div class="caption">New client GUI, built with the Qt framework. (2021)</div>
         </div>
     </body>
 </html>
