--- a/projects/swbs/docs.html
+++ b/projects/swbs/docs.html
@@ -25,8 +25,8 @@
             <a href = "/index.html">Back To Portfolio</a>
         </div>
         <div class = "schema">
-            <img src="/projects/swbs/icon-upscaled.png" class = "project-icons"><h1>SWBS Documentation</h1>
-            <p style = "margin-left: 5px;">Original available <a href = "https://github.com/perpetualCreations/SWBS/blob/master/readme.md" target = "_blank">here</a>.</p>
+            <img src="/projects/swbs/icon-upscaled.png" class = "project-icons" alt = "SWBS Project Icon"><h1>SWBS Documentation</h1>
+            <p style = "margin-left: 5px;">Original <a href = "https://github.com/perpetualCreations/SWBS/blob/master/readme.md" target = "_blank">documentation available here</a>.</p>
             <div id="content">
                 <h4>A straight-forward wrapper for sending and receiving byte strings with sockets.</h4>
                 <h3>Install</h3>
