--- a/projects/abl/docs.html
+++ b/projects/abl/docs.html
@@ -7,12 +7,12 @@
         <meta name="keywords" content="perpetualCreations, dreamerslegacy, dreamer's legacy, dreamerslegacy.xyz, analyticalblacklight, abl, analyticalblacklight, abl documentation, abl docs">
         <meta name="author" content="perpetualCreations">
         <title>ABL Documentation</title>
-        <link rel="preload" href="/css/main.css" as="style">
-        <link rel="preload" href="/css/schema.css" as="style">
+        <link rel="preload" href="/css/newline.min.css" as="style">
+        <link rel="preload" href="/css/schema.min.css" as="style">
         <link rel="preload" href="/projects/abl/icon-upscaled.png" as="image">
-        <link rel="icon" href="/resources/homeIcon-favicon.ico">
-        <link rel="stylesheet" type="text/css" href="/css/main.css">
-        <link rel="stylesheet" type="text/css" href="/css/schema.css">
+        <link rel="icon" href="/resources/favicon.ico">
+        <link rel="stylesheet" type="text/css" href="/css/newline.min.css">
+        <link rel="stylesheet" type="text/css" href="/css/schema.min.css">
         <style>
 			img {
  				 width: 100%;
@@ -22,7 +22,7 @@
     <body> 
         <!-- Maybe you should read the actual page instead of looking at HTML and wrongly expanding your ego. -->
         <div class = "topnav">
-            <a href = "/index.html">Back To Portfolio</a>
+            <a href = "/index.html##projects">Back To Portfolio</a>
         </div>
         <div class = "schema">
             <img src="/projects/abl/icon-upscaled.png" class = "project-icons" alt = "ABL Project Icon"><h1>ABL Documentation</h1>
@@ -37,7 +37,7 @@
             </div>
             <div id="content">
   
-                <h5 style = "margin-top: 50px;">ABL uses pytrends to access Google search interest, and compile data into a CSV spreadsheet, or a graph of interest over time.</h5>
+                <p style = "margin-top: 50px;">ABL uses pytrends to access Google search interest, and compile data into a CSV spreadsheet, or a graph of interest over time.</p>
 
                 <h4>Why?</h4>
                 <p>
