--- a/projects/raspbot/gallery.html
+++ b/projects/raspbot/gallery.html
@@ -27,7 +27,7 @@
         <link rel="preload" href="/projects/raspbot/gallery/client-dev-a.png" as="image">
         <link rel="preload" href="/projects/raspbot/gallery/client-dev-b.png" as="image">
         <link rel="preload" href="/projects/raspbot/gallery/client-dev-2-a.png" as="image">
-        <link rel="icon" href="homeIcon-favicon.ico">
+        <link rel="icon" href="favicon.ico">
         <link rel="stylesheet" type="text/css" href="/css/main.css">
         <link rel="stylesheet" type="text/css" href="/css/gallery.css">
         <style>
@@ -39,7 +39,7 @@
     <body> 
         <!-- Maybe you should read the actual page instead of looking at HTML code and wrongly expanding your ego. -->
         <div class="topnav">
-            <a href="/index.html">Back To Portfolio</a>
+            <a href="/index.html##projects">Back To Portfolio</a>
         </div>
         <div id="title", class="header">
             <h1>Gallery</h1>
