--- a/html/error404.html
+++ b/html/error404.html
@@ -4,24 +4,17 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Error: Not Found (404)</title>
-        <link rel="preload" href="/css/main.css" as="style">
-        <link rel="icon" href="/resources/homeIcon-favicon.ico">
-        <link rel="stylesheet" type="text/css" href="/css/main.css">
+        <link rel="preload" href="/css/error.min.css" as="style">
+        <link rel="preload" href="/js/auto-fill-year.min.js" as="script">
+        <link rel="icon" href="/resources/favicon.ico">
+        <link rel="stylesheet" type="text/css" href="/css/error.min.css">
         <style>
-            body {
-                background-color: white;
-                padding-left: 40px;
-                }
-            @media screen and (max-width: 900px) {
-                  .column {
-                    width: 50%;
-                  }
-                }
+            /* inherits from error.css */
         </style>
     </head>
     <body>
         <!-- Okay this isn't funny anymore, this is serious. -->
-        <h1 style = "text-align: left;">// Error 404</h1>
+        <h1>// Error 404</h1>
         <h3><i>Client-Side Issue, Not Found</i></h3>
         <hr>
         <p>Requested resource does not exist. Check URL address.</p>
