--- a/projects/dgpn/docs.html
+++ b/projects/dgpn/docs.html
@@ -7,12 +7,12 @@
         <meta name="keywords" content="perpetualCreations, dreamerslegacy, dreamer's legacy, dreamerslegacy.xyz, deargodpleaseno, dgpn, ubuntu tempfile, deargodpleaseno docs, dgpn docs, dgpn documentation">
         <meta name="author" content="perpetualCreations">
         <title>DGPN Documentation</title>
-        <link rel="preload" href="/css/main.css" as="style">
-        <link rel="preload" href="/css/schema.css" as="style">
+        <link rel="preload" href="/css/newline.min.css" as="style">
+        <link rel="preload" href="/css/schema.min.css" as="style">
         <link rel="preload" href="/projects/swbs/icon-upscaled.png" as="image">
-        <link rel="icon" href="/resources/homeIcon-favicon.ico">
-        <link rel="stylesheet" type="text/css" href="/css/main.css">
-        <link rel="stylesheet" type="text/css" href="/css/schema.css">
+        <link rel="icon" href="/resources/favicon.ico">
+        <link rel="stylesheet" type="text/css" href="/css/newline.min.css">
+        <link rel="stylesheet" type="text/css" href="/css/schema.min.css">
         <style>
 			img {
  				 width: 100%;
@@ -22,7 +22,7 @@
     <body> 
         <!-- Hey kid. Wanna learn HTML instead of just looking at it and feeling smart? -->
         <div class = "topnav">
-            <a href = "/index.html">Back To Portfolio</a>
+            <a href = "/index.html##projects">Back To Portfolio</a>
         </div>
         <div class = "schema">
             <img src="/projects/dgpn/dgpn-upscaled.png" class = "project-icons" alt = "DGPN Project Icon"><h1>deargodpleaseno (dgpn) Documentation</h1>
