--- a/projects/raspbot/docs.html
+++ b/projects/raspbot/docs.html
@@ -7,12 +7,12 @@
         <meta name="keywords" content="perpetualCreations, dreamerslegacy, dreamer's legacy, dreamerslegacy.xyz, raspbot, raspbot rca, raspbot documentation, raspbot docs, raspbot rca docs">
         <meta name="author" content="deargodpleaseno">
         <title>Raspbot Documentation</title>
-        <link rel="preload" href="/css/main.css" as="style">
-        <link rel="preload" href="/css/schema.css" as="style">
+        <link rel="preload" href="/css/newline.min.css" as="style">
+        <link rel="preload" href="/css/schema.min.css" as="style">
         <link rel="preload" href="/projects/raspbot/icon-upscaled.png" as="image">
-        <link rel="icon" href="/resources/homeIcon-favicon.ico">
-        <link rel="stylesheet" type="text/css" href="/css/main.css">
-        <link rel="stylesheet" type="text/css" href="/css/schema.css">
+        <link rel="icon" href="/resources/favicon.ico">
+        <link rel="stylesheet" type="text/css" href="/css/newline.min.css">
+        <link rel="stylesheet" type="text/css" href="/css/schema.min.css">
         <style>
 			img {
  				 width: 100%;
@@ -22,7 +22,7 @@
     <body> 
         <!-- Maybe you should read the actual page instead of looking at HTML and wrongly expanding your ego. -->
         <div class = "topnav">
-            <a href = "/index.html">Back To Portfolio</a>
+            <a href = "/index.html##projects">Back To Portfolio</a>
         </div>
         <div class = "schema">
             <img src="/projects/raspbot/icon-upscaled.png" class = "project-icons" alt = "Raspbot Project Icon"><h1>Raspbot Documentation</h1>
@@ -64,8 +64,10 @@
                     <h4>Grove Base Shield V2</h4>
                     <p>Grove Base Shield V2 has been discontinued from use.</p>
                     <h4>Power</h4>
-                    <p>12 Volt Circuit</p>
+                    <p>12 Volt Circuit, Tolerance for 9.5V Lowest.</p>
                     <p>3000mAh Lithium-Polymer Battery</p>
+                    <p>Power System includes Voltage Sensor</p>
+                    <p>Automatic Shutdown Upon Exceeding Tolerances</p>
                     <h4>Motors</h4>
                     <p>Driven by Arduino Motor Shield Rev. 3</p>
                     <p>12V DC</p>
@@ -84,7 +86,10 @@
                 <p>The application is written in Python, you may run it by installing Python 3 and the application's associated packages with PIP, please see requirements.txt files for package and version requirements. If using the SenseHAT as part of your hardware configuration, please install the PyPI package and also the Debian package. See hardware list for more details on SenseHAT and certain packages for particular hardware.</p>
                 <p>Client binaries will be made available, however they are unsigned.</p>
                 <p>It's recommended to use a designated user account on the Debian or Debian-based system, and to extract release contents to the user's home directory.</p>
-                <p>In Raspbot RCA v1.1, credits to Pyimagesearch for the live view, please see /tkinter-photo-booth/tkinter-photo-booth-citation.txt for more information. Please note v1.2 and above this dependency has been removed.</p>
+                <p>In Raspbot RCA v1.1, credits to Pyimagesearch for the live camera view, please see /tkinter-photo-booth/tkinter-photo-booth-citation.txt for more information. Please note v1.2 and above this dependency has been removed.</p>
+                <h3>1.4: Previous Revision</h3>
+                <p>The previous hardware revision used a single-use 9V battery for supplying motor power, and used a commercial-off-the-shelf battery bank to power the Raspberry Pi. The chassis has since been redesigned, with more mounting space and wire pass-throughs.</p>
+                <p>The control application client was updated from CLI to use Tkinter, and now the Qt GUI framework through PySide6. Since v1.1, the feature set and scope has gradually grown, and recently the Arduino code was updated for multi-character commands using a buffer.</p>
                 <h3>2.1: Hardware List + Build Directions</h3>
                 <p>Below is a list of hardware used, containg links to buy each of the hardware components, and also directions to assemble. Documentation and downloads can be found on each of the manufacturer's website. Note hardware sets have been revised over the project's development.</p>
                 <p>The top case housing the electronics can be 3D printed, the CAD files are available in the project's download section.</p>
