--- a/index.html
+++ b/index.html
@@ -108,6 +108,19 @@
                     buy my roblox script injector at: admalona.tk
                     -->
                     <div class = "card update-card lazy">
+                        <h2>Update 1.14a</h2>
+                        <p>Project Update, March 1st, 2021</p>
+                        <h3>Raspbot</h3>
+                        <p>Patched Arduino serial to accept multi-character commands, the first command to be implemented exploting this feature is motor speed control.</p>
+                        <p>The Arduino microcontroller will also now constantly monitor battery voltage. When the battery voltage dips below 9.5 volts (which is out of spec), the power supply will be cut off until the battery returns to be above 9.5 volts.</p>
+                        <p>Updates were made to the host application to support these new changes to serial.</p>
+                        <p>Fixed keyboard and motor speed control. Working on resolving minor bugs, streamlining, packaging the first zipped-source pre-release, then resolving ToF sensor, temperature calibration, update patching, Arduino platform-indepedent uploading, then planning out charging and future features.</p>
+                        <p>Updated project documentation with installation instructions, client UI navigation, navigation scripting, hardware lists, and additional revisions and additions.</p>
+                        <p>Updated project gallery with two video demos of tele-operation through the client GUI, and two images of the client interface.</p>
+                        <h3>Site Updates</h3>
+                        <p>Removed one orphan project with no links, removed unused avatars.</p>
+                    </div>
+                    <div class = "card update-card lazy">
                         <h2>Update 1.14</h2>
                         <p>Project Update + Site Update, March 1st, 2021</p>
                         <h3>Raspbot</h3>
