--- a/projects/raspbot/gallery.html
+++ b/projects/raspbot/gallery.html
@@ -9,24 +9,6 @@
         <title>Raspbot Gallery</title>
         <link rel="preload" href="/css/main.css" as="style">
         <link rel="preload" href="/css/gallery.css" as="style">
-        <link rel="preload" href="/projects/raspbot/gallery/upgrade-1-wip.jpg" as="image">
-        <link rel="preload" href="/projects/raspbot/gallery/upgrade-1-voltage-test.jpg" as="image">
-        <link rel="preload" href="/projects/raspbot/gallery/last-photo-before-upgrade-1.jpg" as="image">
-        <link rel="preload" href="/projects/raspbot/gallery/academic-demo-day.jpg" as="image">
-        <link rel="preload" href="/projects/raspbot/gallery/early-proto-build.jpg" as="image">
-        <link rel="preload" href="/projects/raspbot/gallery/dropin.gif" as="image">
-        <link rel="preload" href="/projects/raspbot/gallery/raspbotv2-internal-wip.jpg" as="image">
-        <link rel="preload" href="/projects/raspbot/gallery/dev-2021-b.jpg" as="image">
-        <link rel="preload" href="/projects/raspbot/gallery/dev-2021-c.jpg" as="image">
-        <link rel="preload" href="/projects/raspbot/gallery/dev-2021-assembled-a.jpg" as="image">
-        <link rel="preload" href="/projects/raspbot/gallery/dev-2021-assembled-b.jpg" as="image">
-        <link rel="preload" href="/projects/raspbot/gallery/dev-2021-assembled-c.jpg" as="image">
-        <link rel="preload" href="/projects/raspbot/gallery/dev-2021-active-a.jpg" as="image">
-        <link rel="preload" href="/projects/raspbot/gallery/dev-2021-active-b.jpg" as="image">
-        <link rel="preload" href="/projects/raspbot/gallery/dev-2021-active-c.jpg" as="image">
-        <link rel="preload" href="/projects/raspbot/gallery/client-dev-a.png" as="image">
-        <link rel="preload" href="/projects/raspbot/gallery/client-dev-b.png" as="image">
-        <link rel="preload" href="/projects/raspbot/gallery/client-dev-2-a.png" as="image">
         <link rel="icon" href="favicon.ico">
         <link rel="stylesheet" type="text/css" href="/css/main.css">
         <link rel="stylesheet" type="text/css" href="/css/gallery.css">
@@ -43,9 +25,35 @@
         </div>
         <div id="title", class="header">
             <h1>Gallery</h1>
-            <p>Photos of Raspbot.</p>
+            <p>Photos and video demos of Raspbot.</p>
         </div>
         <hr>
+        <div class="gallery">
+            <video width = "180px;" controls><source src = "/projects/raspbot/gallery/2021-03-06_20-58-37.mkv" type = "video/mp4"></video>
+            <div class = "caption">GUI client piloting. (2021)</div>
+        </div>
+        <div class="gallery">
+            <video width = "180px;" controls><source src = "/projects/raspbot/gallery/2021-03-06_21-00-30.mkv" type = "video/mp4"></video>
+            <div class = "caption">Longer GUI client piloting. (2021)</div>
+        </div>
+        <div class="gallery">
+            <a target="_blank" href="/projects/raspbot/gallery/client-dev-2-b.png">
+                <img src="/projects/raspbot/gallery/client-dev-2-b.png" alt="client GUI">
+            </a>
+            <div class="caption">Config editor GUI. (2021)</div>
+        </div>
+        <div class="gallery">
+            <a target="_blank" href="/projects/raspbot/gallery/client-dev-2-c.png">
+                <img src="/projects/raspbot/gallery/client-dev-2-c.png" alt="client GUI">
+            </a>
+            <div class="caption">Revised ping GUI. (2021)</div>
+        </div>
+        <div class="gallery">
+            <a target="_blank" href="/projects/raspbot/gallery/client-dev-2-a.png">
+                <img src="/projects/raspbot/gallery/client-dev-2-a.png" alt="client GUI">
+            </a>
+            <div class="caption">New client GUI, built with the Qt framework. (2021)</div>
+        </div>
         <div class="gallery">
             <a target="_blank" href="/projects/raspbot/gallery/upgrade-1-wip.jpg">
                 <img src="/projects/raspbot/gallery/upgrade-1-wip.jpg" alt="WIP Picture of Upgrade #1 build">
@@ -151,12 +159,6 @@
                 <img src="/projects/raspbot/gallery/client-dev-b.png">
             </a>
             <div class="caption">In-dev client, ping menu. (2021)</div>
-        </div>
-        <div class="gallery">
-            <a target="_blank" href="/projects/raspbot/gallery/client-dev-2-a.png">
-                <img src="/projects/raspbot/gallery/client-dev-2-a.png">
-            </a>
-            <div class="caption">New client GUI, built with the Qt framework. (2021)</div>
         </div>
     </body>
 </html>
